--- a/GameHubCSharp/Views/Home/News.cshtml
+++ b/GameHubCSharp/Views/Home/News.cshtml
@@ -1,6 +1,6 @@
 ﻿@using GameHubCSharp.Models.View
 @model List<PostViewModel>
-<div class="container">
+<div class="" style="margin-left:15%;margin-right:15%">
 
     <div class="row">
 
@@ -15,12 +15,22 @@
             <!-- Blog Post -->
             @foreach (PostViewModel post in Model)
             {
-                <div class="card mb-4">
-                    <img class="card-img-top" src="@post.ImageUrl" alt="@post.ImageUrl">
-                    <div class="card-body">
-                        <h2 class="card-title">@post.Topic</h2>
-                        <p class="card-text">@post.Text</p>
-                        <a href="@post.Link" class="btn btn-primary">Read More →</a>
+                <div class="mb-4" id="news-card-div" >
+                    <div style="width:100%;margin-bottom:2rem;height:auto">
+                        <div style="position:relative;display:inline-block;width:45%;vertical-align:top;padding:1%;right:2%;">
+                            <img style="width: 90%; height: 10rem;border-radius:5px" src="@post.ImageUrl" alt="@post.ImageUrl">
+                        </div>
+                        <div style="position:relative;display:inline-block;width:50%;left:2%">
+                            <div class="text-left">
+                                <h2 style="color:white" class="card-title">@post.Topic</h2>
+
+                                <p style="color:white" class="card-text">@post.Text</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-left" style="width:100%">
+                        <a style="margin-left:3%" asp-route-url="@post.Link" asp-controller="Admin" asp-action="RedirectTo" class="btn btn-primary bg-info">Read More →</a>
                     </div>
                     <div class="card-footer text-muted">
                         @post.CreatedAt
@@ -30,11 +40,11 @@
             }
 
             <!-- Pagination -->
-            <ul class="pagination justify-content-center mb-4" >
-                <li class="page-item" >
+            <ul class="pagination justify-content-center mb-4">
+                <li class="page-item">
                     <a class="page-link" style="background-color: #0e3a88be;;color:white" href="#">← Older</a>
                 </li>
-                <li class="page-item disabled" >
+                <li class="page-item disabled">
                     <a class="page-link" style="background-color: #0e3a88be;color:white" href="#">Newer →</a>
                 </li>
             </ul>
@@ -46,16 +56,16 @@
 
             <!-- Search Widget -->
             <!--<div class="card my-4">
-        <h5 class="card-header">Search</h5>
-        <div class="card-body">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-append">
-                    <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
-            </div>
-        </div>
-    </div>-->
+                <h5 class="card-header">Search</h5>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-append">
+                            <button class="btn btn-secondary" type="button">Go!</button>
+                        </span>
+                    </div>
+                </div>
+            </div>-->
             <!-- Categories Widget -->
             <div class="card my-4 mt-5" style="text-align: center;margin-top:2rem; border-radius: 12px;border: 2px solid;background-color: #3b0d41bf;">
                 <h5 class="card-header" style="color:white">Categories</h5>
@@ -134,8 +144,4 @@
     <!-- /.row -->
 
 </div>
-<a id="back-to-top"  href="#" class="btn btn-light btn-lg back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-lg"></i></a>
-<script>
-
-
-</script>
+<a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-lg"></i></a>
