--- a/GameHubCSharp/wwwroot/css/style.css
+++ b/GameHubCSharp/wwwroot/css/style.css
@@ -40,14 +40,20 @@ form{
     border: 2px solid ;
     background-color: #0d1626be;
 }
-#logout{
+#news-card-div {
+    border-radius: 12px;
+    border: 2px solid;
+    background-color: #0d1626be;
+    
+}
+#logout {
     display: inline-block;
-    margin:0;
+    margin: 0;
     width: auto;
     text-align: center;
     padding: 0;
     border: none;
-    background-color:#a000008f;
+    background-color: #a000008f;
 }
 #logout:hover{
     background-color: rgba(253, 0, 0, 0.56);
