--- a/GameHubCSharp/Views/Home/News.cshtml
+++ b/GameHubCSharp/Views/Home/News.cshtml
@@ -1,4 +1,5 @@
 ﻿@using GameHubCSharp.Models.View
+@using GameHubCSharp.Data.Models
 @model List<PostViewModel>
 <div class="" style="margin-left:15%;margin-right:15%">
 
@@ -45,10 +46,10 @@
                 var next = (string)ViewData["HasNext"];
                 <ul class="pagination justify-content-center mb-4">
                     <li class="page-item @prev">
-                        <a class="page-link" asp-action="News" asp-controller="Home" asp-route-pageNumber="@((int)ViewData["PageNumber"] - 1)" style="background-color: #0e3a88be;color:white" >← Older</a>
+                        <a class="page-link" asp-action="News" asp-controller="Home" asp-route-pageNumber="@((int)ViewData["PageNumber"] - 1)" asp-route-categoryName=@((string)ViewData["Category"]??"") style="background-color: #0e3a88be;color:white">← Older</a>
                     </li>
                     <li class="page-item @next">
-                        <a class="page-link" asp-action="News" asp-controller="Home" asp-route-pageNumber="@((int)ViewData["PageNumber"] + 1)" style="background-color: #0e3a88be;color:white" >Newer →</a>
+                        <a class="page-link" asp-action="News" asp-controller="Home" asp-route-pageNumber="@((int)ViewData["PageNumber"] + 1)" asp-route-categoryName=@((string)ViewData["Category"]??"") style="background-color: #0e3a88be;color:white">Newer →</a>
                     </li>
                 </ul>
             }
@@ -75,32 +76,38 @@
                 <h5 class="card-header" style="color:white">Categories</h5>
                 <div class="card-body" style="width: 100%;background-color: #0d1626be;border-radius: 12px;border: 2px solid;">
                     <div class="row">
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled mb-0" style="">
-                                <li>
-                                    <a href="#">Web Design</a>
-                                </li>
-                                <li>
-                                    <a href="#">HTML</a>
-                                </li>
-                                <li>
-                                    <a href="#">Freebies</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-unstyled mb-0">
-                                <li>
-                                    <a href="#">JavaScript</a>
-                                </li>
-                                <li>
-                                    <a href="#">CSS</a>
-                                </li>
-                                <li>
-                                    <a href="#">Tutorials</a>
-                                </li>
-                            </ul>
-                        </div>
+                        @{
+                            var categories = (List<Category>)ViewData["Categories"];
+                            var firstHalf = categories.Count / 2;
+
+                            if (categories.Count != 0)
+                            {
+
+                                <div class="col-lg-6">
+                                    <ul class="list-unstyled mb-0" style="">
+                                        @for (int i = 0; i < (firstHalf == 0 ? 1 : firstHalf); i++)
+                                        {
+                                            <li>
+                                                <a asp-action="News" asp-route-categoryName="@categories[i].Type">@categories[i].Type</a>
+                                            </li>
+
+                                        }
+                                    </ul>
+                                </div>
+                                <div class="col-lg-6">
+                                    <ul class="list-unstyled mb-0">
+                                        @for (int i = (firstHalf == 0 ? 1 : firstHalf); i < categories.Count; i++)
+                                        {
+                                            <li>
+                                                <a asp-action="News" asp-route-categoryName="@categories[i].Type">@categories[i].Type</a>
+                                            </li>
+
+                                        }
+                                    </ul>
+                                </div>
+                            }
+
+                        }
                     </div>
                 </div>
             </div>
