--- a/GameHubCSharp/Views/Shared/_NavPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_NavPartial.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="float-left" style="float:left;display: inline-block">
+﻿
+<div class="float-left" style="float:left;display: inline-block">
     <a style="color:rgb(255, 255, 255);padding: 0;margin-left: 10%" asp-action="Home" asp-controller="Home"
        class="nav-link text-light">
         <img style="height: 2em;width: 9em" src="/img/output-onlinepngtools.png">
@@ -7,15 +8,15 @@
 <ul class="nav justify-content-end">
     <li class="nav-item">
         <ul class="navbar-nav ml-auto ">
-            <li class="nav-item avatar dropdown">
-                <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <span id="counter" class="badge badge-danger ml-2">0</span>
+            <li class="nav-item avatar dropdown" style="height:2.5rem">
+                <a class="nav-link waves-effect waves-light" id="navbarDropdownMenuLink-5" style="position:relative;top:-8px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <span id="counter" class="badge badge-danger ml-2">@ConnectionIdProvider.notifications.Count(n=>n.IsRead==false)</span>
                     <i style="color:white;padding-top:0.8rem;" class="nav-link active far fa-bell fa-lg d-inline-block"></i>
                 </a>
-                <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary" aria-labelledby="navbarDropdownMenuLink-5">
-                    <a class="dropdown-item waves-effect waves-light" href="#">Action <span class="badge badge-danger ml-2">4</span></a>
-                    <a class="dropdown-item waves-effect waves-light" href="#">Another action <span class="badge badge-danger ml-2">1</span></a>
-                    <a class="dropdown-item waves-effect waves-light" href="#">Something else here <span class="badge badge-danger ml-2">4</span></a>
+                <div class="dropdown-menu dropdown-menu-lg-left dropdown-secondary" style="background-color: #1a031d62;" aria-labelledby="navbarDropdownMenuLink-5">
+                    @foreach (var not in ConnectionIdProvider.notifications) {
+                        <a class="dropdown-item waves-effect waves-light" asp-route-id="@not.GameEvent.Id" asp-controller="GameEvent" asp-action="GameEventDetail"><span class="badge badge-danger ml-2">@not.Message</span></a>
+                    }
                 </div>
             </li>
         </ul>
