--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -42,7 +42,7 @@
 
         <div style="position:relative;" id="last">
 
-            <form class="mt-5 text-left form-event" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
+            <form class="mt-5 text-left form-event" id="form1" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
                   method="POST">
                 <div class="text-left">
                     <p style="color: lawngreen; margin-left: 5%" class="card-text mb-3">Your nick name :</p>
@@ -54,7 +54,8 @@
                        aria-describedby="validatedInputGroupPrepend"
                        required>
 
-                <button id="joinEvent" onclick="mafunc()" class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3" type="submit">I'm in</button>
+                <button id="joinEvent" class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3">I'm in</button>
+
                 @if ((bool?)ViewData["valid"] != true)
                 {
                     <div class="invalid-feedback">
